--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 annotated-types==0.7.0
 anyio==4.9.0
+cachetools==5.5.2
 certifi==2025.7.14
 cffi==1.17.1
+charset-normalizer==3.4.2
 click==8.2.1
 cryptography==45.0.5
 dnspython==2.7.0
@@ -10,6 +12,8 @@ email_validator==2.2.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
 fastapi-cloud-cli==0.1.4
+google-auth==2.40.3
+google-genai==1.27.0
 h11==0.16.0
 httpcore==1.0.9
 httptools==0.6.4
@@ -22,6 +26,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.11.0
 pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.7
 pydantic-extra-types==2.10.5
@@ -32,6 +37,7 @@ python-dotenv==1.1.1
 python-jose==3.5.0
 python-multipart==0.0.20
 PyYAML==6.0.2
+requests==2.32.4
 rich==14.1.0
 rich-toolkit==0.14.8
 rignore==0.6.4
@@ -41,6 +47,7 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 starlette==0.47.2
+tenacity==8.5.0
 typer==0.16.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
