--- a/requirements.txt
+++ b/requirements.txt
@@ -25,6 +25,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.11.0
+pillow==11.3.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pycparser==2.22
